--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.2",
     "@hono/node-server": "^1.14.0",
+    "@supabase/supabase-js": "^2.49.3",
     "ai": "^4.2.2",
     "dotenv": "^16.4.7",
     "hono": "^4.7.5"
