--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.2",
     "@hono/node-server": "^1.14.0",
+    "@hono/zod-validator": "^0.4.3",
+    "@supabase/supabase-js": "^2.49.3",
     "ai": "^4.2.2",
     "dotenv": "^16.4.7",
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
